UNRELEASED, S3QL tip

  * The s3c backend has a new 'dumb-copy' option. If this option
    is enabled, copy operations are assumed to have succeeded
    as soon as the server returns a '200 OK' status, without
    checking the contents of the response body.

2014-09-04, S3QL 2.11.1

  * By popular demand, mount.s3ql is now able to daemonize again
    and also does so by default.

  * Un-encrypted file systems (created with mkfs.s3ql --plain) can now
    be upgraded to the newest revision.

  * S3QL now automatically retries a request if a backend server
    reports a 408 (Request Timeout) status code.

  * The Google Storage backend now copes better with server errors
    when refreshing an OAuth2 access token.

2014-08-27, S3QL 2.11

  * SECURITY UPDATE (CVE-2014-0485).

    A remote code execution vulnerability was fixed.

    An attacker with control over the communication with the storage
    backend or the ability to manipulate the data stored in the
    backend was able to trigger execution of arbitrary code by
    mount.s3ql, fsck.s3ql, mkfs.s3ql, s3qladm and s3ql_verify. Both
    encrypted and unencrypted file systems were vulnerable.

  * s3ql_verify no longer crashes when checking an empty file system.

  * Fixed a crash when using Google OAuth2 and the first request after
    the access token has expired is a write request.

  * mount.s3ql now supports systemd-style readyness notification. To
    use this feature, make sure that you have the 'systemd' module
    installed for Python 3.

    This feature has not been tested, if you use it or encounter
    problems, please report back.

  * Fixed a race condition that could cause tests/t5_failsafe.py to
    fail.

  * mount.s3ql no longer daemonizes on its own. With a modern init
    system this should no longer be necessary, and when running
    mount.s3ql from the command line the shell can be used to put the
    process into background.

  * There is a new --backend-options parameter that can be used to